# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test-linter-check.yml
page_loader/: __init__.py  app_errors.py  cli.py  page_loader.py  resource_loader.py  resourse_loader.py
page_loader/scripts/: __init__.py  downloader.py  page_loader.py
tests/: test_page_loader.py
tests/fixtures/: Sam_Neill_Web.html  Simple_HTML_page.html  replace_images.txt  resources_list.txt
