[tool.poetry]
name = "hexlet-code"
version = "0.1.28"
description = "Page loader"
authors = ["twistby <pref@outlook.com>"]
packages = [
   { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
fake-useragent = "^0.1.11"
progress = "^1.6"


[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.2"
mypy = "^0.902"
pytest-cov = "^2.12.1"
types-requests = "^2.25.9"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"